# WhisperAI-Speech-To-Text

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  WhisperAI.spec  asr.json  helper.py  main.py  pyproject.toml  requirements.txt  research_findings.md  scaffold_phase1.py  speculative.json  test_canonical.py  test_canonical2.py  test_hotkey.py  test_keys.py  test_parse.py  test_vk.py  version.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: pr-validation.yml  release.yml
hooks/: hook-llama_cpp.py
installer/: setup.iss
resources/: disfluency.json
rthooks/: rthook_llama_cpp.py
scratch/: test_focus.py  test_toggle.py
src/: main.py
src/asr/: engine.py
src/audio/: capture.py  vad.py
src/config/: manager.py
src/core/: app.py  pipeline.py  telemetry.py  updater.py  watchdog.py
src/data/: stats_store.py
src/gui/: downloader_dialog.py  flow_bubble.py  overlay.py  settings.py  tray.py
src/hotkey/: listener.py
src/injection/: ide_bridge.py  injector.py  window_detect.py
src/llm/: engine.py  formatter.py  prompts.py  style_profiles.py
src/teams/: api_client.py  auth.py  sync.py
src/utils/: paths.py  (+6 more)
tests/: generate_wav.py  profiling_test.py  test_app.py  test_asr.py  test_asr_trim.py  test_audio_capture.py  test_config.py  test_hotkey_listener.py  test_injector.py  test_list_detection.py  test_llm.py  test_overlay.py  test_pipeline.py  test_telemetry.py  test_watchdog.py  test_window_detect.py
(+4 files in other folders)
